# aws-crt-ffi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  builder.json  format-check.py  format-check.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  lint.yml
aws-crt-sys/: Cargo.toml  build.rs
aws-crt-sys/src/: .gitignore  lib.rs
aws-crt-sys/tests/: lib.rs
cmake/: aws-crt-ffi-config.cmake
src/: api.h  crc.c  credentials.c  credentials.h  credentials_providers.c  crt.c  crt.h  crypto.c  errors.c  event_loop_group.c  hash.c  http.h  http_message.c  input_stream.c  input_stream.h  logging.c  promise.c  signing.c
