[package]
name = "aws-crt-sys"
version = "0.1.0"
authors = ["AWS Common Runtime Team (aws-sdk-common-runtime-team@amazon.com)"]
edition = "2018"
links = "aws-crt-ffi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cmake = "0.1"
bindgen = "0.59"

[dev-dependencies]
once_cell = "1.8.0"
